Fix image width on mobile version.

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -4,8 +4,8 @@
 
 body {
   background: url('http://acoes1ano.vhost.ifpb.edu.br/images/background-casa.jpg');
-  background-size: 100%;
-  background-position: top center;
+  background-size: cover;
+  background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
@@ -46,6 +46,7 @@ body {
 }
 .img-event {
   margin: 0 auto;
+  width: 100%;
 }
 
 @media(min-width: 768px) {
